--- a/iron-image.html
+++ b/iron-image.html
@@ -236,7 +236,7 @@ Examples:
 
     observers: [
       '_transformChanged(sizing, position)',
-      '_loadBehaviorChanged(canLoad, preload, loaded)',
+      '_loadBehaviorChanged(canLoad, preload, loaded, src)',
       '_loadStateChanged(src, preload, loaded)',
     ],
 
